--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^7.12.1",
     "@mantine/form": "^7.12.1",
     "@mantine/hooks": "^7.12.1",
+    "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.3.1",
     "react": "^18.3.1",
